--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,9 @@ jobs:
       - run:
           name: Run tests
           command: |
-            dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
-            /tmp/spdk/scripts/setup.sh
+            # TODO: Figure out how to do it
+            #dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
+            #/tmp/spdk/scripts/setup.sh
             cargo test --all
       - save_cache:
           key: rust-v3-{{ .Branch }}-{{ .Revision }}
