--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,8 @@ jobs:
       - run:
           name: Run tests
           command: |
+            sudo su
+            curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain none -y
             source $HOME/.cargo/env
             dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
             cargo test --all
