Fixup LD_LIBRARY_PATH

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ jobs:
             curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain none -y
             source $HOME/.cargo/env
             dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
+            export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/local/lib"
             cargo test --all
       # - save_cache:
       #     key: rust-v5-{{ .Branch }}-{{ .Revision }}
