--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,10 @@ jobs:
     machine:
       image: circleci/classic:latest
     steps:
+      - run:
+          name: Test
+          command: |
+            sudo 
       - restore_cache:
           keys:
             - source-v5-{{ .Branch }}-{{ .Revision }}
@@ -52,19 +56,15 @@ jobs:
             # -- -D warnings
             cargo clippy --all --all-targets --all-features
       - run:
-          name: Build starfish
-          command: |
-            source $HOME/.cargo/env 
-            cargo build --all
-      - run:
           name: Run tests
           command: |
-            sudo -s
-            curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain none -y
-            source $HOME/.cargo/env
-            dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
-            export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/local/lib"
-            cargo test --all
+            sudo -s -- <<EOF
+              curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain none -y
+              source $HOME/.cargo/env
+              dd if=/dev/zero of=/tmp/aiofile bs=2048 count=5000
+              export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/local/lib"
+              cargo test --all
+            EOF
       # - save_cache:
       #     key: rust-v5-{{ .Branch }}-{{ .Revision }}
       #     paths:
