--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,7 @@ jobs:
           command: |
             source $HOME/.cargo/env
             rustup component add clippy-preview
-            # Enabling warnings trips clippy in generated code that has a compiler warning; 
-            # See https://github.com/rust-lang-nursery/rust-clippy/issues/702
-            # -- -D warnings
-            cargo clippy --all --all-targets --all-features
+            cargo clippy --all --all-targets --all-features -- -D warnings
       - run:
           name: Run tests
           command: |
