--- a/starfish-executor/Cargo.toml
+++ b/starfish-executor/Cargo.toml
@@ -7,7 +7,7 @@ Single threaded executor for futures-rs. No Arc in sight.
 """
 
 [dependencies]
-futures-preview = "= 0.3.0-alpha.6"
+futures-preview = "= 0.3.0-alpha.7"
 
 [dev-dependencies]
-hamcrest = "*"
+hamcrest2 = "*"
