--- a/spdk-sys/Cargo.toml
+++ b/spdk-sys/Cargo.toml
@@ -22,4 +22,6 @@ bindgen = "= 0.41.0"
 
 [dev-dependencies]
 hamcrest2 = "*"
+tempfile = "3.0.4"
+nix = "0.11.0"
 starfish-executor = { path = "../starfish-executor" }
