--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,10 @@ target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
-Cargo.lock
+# Cargo.lock
 #/.cargo/
 
 # IDE directories
 /.idea/
 /.vscode/
+/*.code-workspace
