--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run: echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
       - run: docker build -t $DOCKER_USERNAME/starfish:latest -f .circleci/images/Dockerfile .
       - run: docker push $DOCKER_USERNAME/starfish:latest
   build:
