--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,13 @@ jobs:
     steps:
       - checkout
       - run: echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
-      - run: docker build -t $DOCKER_USERNAME/starfish:latest .
+      - run: DOCKER_BUILDKIT=1 docker build -t $DOCKER_USERNAME/starfish:latest .
       - run: docker push $DOCKER_USERNAME/starfish:latest
   build:
     machine:
-      image: $DOCKER_USERNAME/starfish:latest
+      image: jkozlowski/starfish:latest
+      environment:
+          DOCKER_BUILDKIT: 1
       auth:
           username: $DOCKER_USERNAME
           password: $DOCKER_PASSWORD
