--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,51 +4,26 @@ jobs:
     machine:
       image: circleci/classic:latest
     steps:
-      - restore_cache:
-          keys:
-            - source-v5-{{ .Branch }}-{{ .Revision }}
-            - source-v5-{{ .Branch }}-
-            - source-v5-
       - checkout
-      - save_cache:
-          key: source-v5-{{ .Branch }}-{{ .Revision }}
-          paths:
-            - ".git"
-      - restore_cache:
-          keys:
-            - spdk-v5-{{ checksum ".circleci/scripts/build_spdk.sh" }}
-            - spdk-v5-
       - run:
           name: Build spdk
           command: sh .circleci/scripts/build_spdk.sh
-      # TODO: restore cache by installing to another directory
-      # - save_cache:
-      #     key: spdk-v5-{{ checksum ".circleci/scripts/build_spdk.sh" }}
-      #     paths:
-      #       - "/usr/local/include"
-      #       - "/usr/local/lib"
-      # - restore_cache:
-      #     keys:
-      #       - rust-v5-{{ .Branch }}-{{ .Revision }}
-      #       - rust-v5-{{ .Branch }}-
-      #       - rust-v5-
       - run:
           name: Install rustup
           command: |
             curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain none -y
       - restore_cache:
           keys:
-            - deps-v1-{{ .Branch }}-{{ .Revision }}
-            - deps-v1-{{ .Branch }}-
-            - deps-v1-
+            - deps-${CACHE_VERSION}-{{ .Branch }}-{{ .Revision }}
+            - deps-${CACHE_VERSION}-{{ .Branch }}-
+            - deps-${CACHE_VERSION}-
       - run:
           name: Cache dependencies
           command: |
             source $HOME/.cargo/env
-            cargo install cargo-build-deps
-            cargo build-deps
+            cargo fetch --all
       - save_cache:
-          key: deps-v5-{{ .Branch }}-{{ .Revision }}
+          key: deps-${CACHE_VERSION}-{{ .Branch }}-{{ .Revision }}
           paths:
             - "target"
       - run:
@@ -67,9 +42,3 @@ jobs:
           name: Run tests
           command: |
             sudo bash .circleci/scripts/run_test.sh 
-      # - save_cache:
-      #     key: rust-v5-{{ .Branch }}-{{ .Revision }}
-      #     paths:
-      #       - "target/"
-      #       - "~/.cargo/"
-      #       - "~/.multirust/"
