--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ libc = "= 0.2.43"
 spectral = "= 0.6.0"
 slog-term = "=2.0.2"
 
+cargo-features = ["rename-dependency"]
+
 [workspace]
 
 members = [
