--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = """
 Async programming with spdk for rust.
 """
 edition = '2018'
+features = ["rename-dependency"]
 
 [dependencies]
 failure = "= 0.1.2"
@@ -17,7 +18,6 @@ libc = "= 0.2.43"
 spectral = "= 0.6.0"
 slog-term = "=2.0.2"
 
-cargo-features = ["rename-dependency"]
 
 [workspace]
 
