--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,9 @@ jobs:
       - run:
           name: Run tests
           command: |
+            eval `ssh-agent -s`
+            ssh-add ~/.ssh/id_pipelines
+            ssh-add -l
             sudo bash .circleci/scripts/run_test.sh 
       # - save_cache:
       #     key: rust-v5-{{ .Branch }}-{{ .Revision }}
