--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
       - checkout
       - run: echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
       - run: docker pull $DOCKER_USERNAME/starfish:latest || true
-      - run: DOCKER_BUILDKIT=1 docker build \
-               --cache-from $DOCKER_USERNAME/starfish:latest \ 
+      - run: DOCKER_BUILDKIT=1 docker build
+               --cache-from $DOCKER_USERNAME/starfish:latest
                -t $DOCKER_USERNAME/starfish:latest .
       - run: docker push $DOCKER_USERNAME/starfish:latest
   build:
@@ -41,7 +41,9 @@ jobs:
           name: Run tests
           command: |
             # docker run --privileged --cap-add=ALL -v  /dev:/dev -v  /lib/modules:/lib/modules -it $DOCKER_USERNAME/starfish:latest
-            docker run --privileged --cap-add=ALL $DOCKER_USERNAME/starfish:latest -c .circleci/scripts/run_test.sh 
+            docker run --privileged --cap-add=ALL 
+                       $DOCKER_USERNAME/starfish:latest 
+                       -c .circleci/scripts/run_test.sh 
 workflows:
   version: 2
   build:
