--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
     steps:
       - checkout
       - run: echo "$DOCKER_PASSWORD" | docker login -u $DOCKER_USERNAME --password-stdin
-      - run: docker pull $DOCKER_USERNAME/starfish:latest || true
+      #- run: docker pull $DOCKER_USERNAME/starfish:latest || true
       - run: DOCKER_BUILDKIT=1 docker build
-               --cache-from $DOCKER_USERNAME/starfish:latest
+               #--cache-from $DOCKER_USERNAME/starfish:latest
                -t $DOCKER_USERNAME/starfish:latest .
       - run: docker push $DOCKER_USERNAME/starfish:latest
   build:
